# RailwayScheduling

./: .coveragerc  .gitignore  README.md  config.yaml  pyproject.toml
Code/: Generate-ASP-Map.py  README.md  basic.lp  basic2.lp  custom_railmap_example.py  simple_flatland_run.py  test.lp
data/encodings/: dev.lp  primitive-prediction.lp  test.lp  vertex.lp
data/encodings/deprecated/: primitive-prediction.lp
data/environments/: 20x20x1-snake.pkl  2x3x1-simple_switch.pkl  2x3x2-switch_dead_end_passing.pkl  3x10x1-four_cycle.pkl  3x10x2-four_cycle.pkl  3x10x3-four_cycle.pkl  3x10x4-four_cycle.pkl  3x4x1-single_cycle.pkl  3x4x2-single_cycle.pkl  3x4x3-single_cycle.pkl  3x4x4-single_cycle.pkl  3x5x2-simple_order.pkl  4x3x1-no_exit.pkl  5x5x1-snake.pkl  5x5x2-crossing.pkl  README.md
data/environments/deprecated/: m_example_map.pkl  m_simple-switch_map.pkl
data/instances/: dev_simple_switch_map_instance.lp
data/statistics/: stats_total.json
encodings/: README.md  dev.lp  test.lp  vsp-explicit-wait.lp
src/rasch/: benchmark.py  benchmark_visualise.py  direction.py  file.py  instance_generation.py  line_generation.py  logging.py  main.py  rasch_config.py  rasch_setup.py  rasch_simulator.py  rasch_solver.py
tests/rasch/: conftest.py  file_test.py  pytest.ini  test_encoding.py
tests/rasch/environments/: test_config.yaml
tests/rasch/instances/: dev_simple_switch_map_instance.lp
tests/rasch/solutions/: dev_simple_switch_map_solve.json  test_solve.json
