[project]
name = "rasch"
version = "0.1"
dependencies = [
    "flatland-rl",
    "clingo",
    "ruff",
    "pytest",
    "coverage"
]

[project.scripts]
rasch = "rasch.main:main"

[tool.ruff]
extend-select = ["C4","SIM","TCH", "I", "N", "B", "BLE", "ERA", "ICN", "RET", "RSE", "RUF", "S", "T20", "TID"]
ignore = ["S101", "B008", "B905", "F541", "RUF012"]
show-fixes = true
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]